{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 138,
  "lineage": "43ef02e1-4320-3e48-5616-940b04eac3f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0003590cff8b96ca9",
            "domain": "vpc",
            "id": "eipalloc-0003590cff8b96ca9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-19-239-219.compute-1.amazonaws.com",
            "public_ip": "50.19.239.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-nat-eip",
              "Path": "terraform/nat-gateway.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-nat-eip",
              "Path": "terraform/nat-gateway.tf"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-db-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:831187637319:instance/i-095ed594c14fde260",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095ed594c14fde260",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-038dfb1db617b9dfc",
            "private_dns": "ip-192-168-4-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.4.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a328daf24a94a4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025d26b359d874eb5",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-ec2-db-1",
              "Path": "terraform/ec2-db.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-ec2-db-1",
              "Path": "terraform/ec2-db.tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa766301650080b8"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_s3_bucket.this",
            "aws_security_group.db",
            "aws_subnet.db-subnet-1",
            "aws_vpc.this",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-db-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:831187637319:instance/i-09cd337fb2eb75fa5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cd337fb2eb75fa5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c51b8cceac3c8c3",
            "private_dns": "ip-192-168-5-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.5.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f0efd20531d344fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0820bbafc19e1164e",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-ec2-db-2",
              "Path": "terraform/ec2-db.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-ec2-db-2",
              "Path": "terraform/ec2-db.tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa766301650080b8"
            ]
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_key_pair.generated_key",
            "aws_nat_gateway.nat",
            "aws_s3_bucket.this",
            "aws_security_group.db",
            "aws_subnet.db-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:831187637319:instance/i-047cdb8cf311caecd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047cdb8cf311caecd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aaea944016c5da82",
            "private_dns": "ip-192-168-0-168.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a5368473bf814a8b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018d0aa994ce80d99",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-ec2-private-1",
              "Path": "terraform/ec2-private.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-ec2-private-1",
              "Path": "terraform/ec2-private.tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0127e926052e57bb2"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private",
            "aws_security_group.private",
            "aws_subnet.private-subnet-1",
            "aws_vpc.this",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:831187637319:instance/i-0c07c3ae803328efb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c07c3ae803328efb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c57e57077a957601",
            "private_dns": "ip-192-168-1-127.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07af10aab353e0d81",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a94b8d3ce617673",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-ec2-private-2",
              "Path": "terraform/ec2-private.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-ec2-private-2",
              "Path": "terraform/ec2-private.tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0127e926052e57bb2"
            ]
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_key_pair.generated_key",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private",
            "aws_security_group.private",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:831187637319:instance/i-08f546730be9210db",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f546730be9210db",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b5fd58bb8e9e0e11",
            "private_dns": "ip-192-168-2-192.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.192",
            "public_ip": "184.72.186.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08b013e0a462a5b94",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015c822170ea8052a",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-ec2-public-1",
              "Path": "terraform/ec2-public.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-ec2-public-1",
              "Path": "terraform/ec2-public.tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-022c6738bb03c2446"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_lb.internal-alb",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private",
            "aws_security_group.alb-public",
            "aws_security_group.public",
            "aws_subnet.private-subnet-1",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this",
            "data.template_file.user_data",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:831187637319:instance/i-096f95d8d62793ffa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096f95d8d62793ffa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063c941c5433b15eb",
            "private_dns": "ip-192-168-3-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.3.140",
            "public_ip": "107.22.130.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-031a9305e6a4110ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9d26b21e543d23e",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-ec2-public-2",
              "Path": "terraform/11-ec2-public.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-ec2-public-2",
              "Path": "terraform/11-ec2-public.tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-022c6738bb03c2446"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_lb.internal-alb",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private",
            "aws_security_group.alb-public",
            "aws_security_group.public",
            "aws_subnet.private-subnet-1",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-2",
            "aws_vpc.this",
            "data.template_file.user_data",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:internet-gateway/igw-0e23848f23fbbed1f",
            "id": "igw-0e23848f23fbbed1f",
            "owner_id": "831187637319",
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:loadbalancer/app/frontend/c3b1b5cf6e8a59ed",
            "arn_suffix": "app/frontend/c3b1b5cf6e8a59ed",
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-1796279257.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:loadbalancer/app/frontend/c3b1b5cf6e8a59ed",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03ef22103245f79d1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015c822170ea8052a"
              },
              {
                "subnet_id": "subnet-0f9d26b21e543d23e"
              }
            ],
            "subnets": [
              "subnet-015c822170ea8052a",
              "subnet-0f9d26b21e543d23e"
            ],
            "vpc_id": "vpc-0ac4f798023280716",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_security_group.alb-public",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:loadbalancer/app/backend/b43653413e8cc89f",
            "arn_suffix": "app/backend/b43653413e8cc89f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-1267404827.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:loadbalancer/app/backend/b43653413e8cc89f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-041058082c17466f2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-018d0aa994ce80d99"
              },
              {
                "subnet_id": "subnet-07a94b8d3ce617673"
              }
            ],
            "subnets": [
              "subnet-018d0aa994ce80d99",
              "subnet-07a94b8d3ce617673"
            ],
            "vpc_id": "vpc-0ac4f798023280716",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_security_group.alb-private",
            "aws_subnet.private-subnet-1",
            "aws_subnet.private-subnet-2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:listener/app/frontend/c3b1b5cf6e8a59ed/84b67df002c3abdd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-ALB-TG/161c782cc9421822",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:listener/app/frontend/c3b1b5cf6e8a59ed/84b67df002c3abdd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:loadbalancer/app/frontend/c3b1b5cf6e8a59ed",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external-alb",
            "aws_lb_target_group.external-target-elb",
            "aws_s3_bucket.this",
            "aws_security_group.alb-public",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:listener/app/backend/b43653413e8cc89f/ac87db52a993c591",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-ALB-TG/6f4ffa96e36c0f0a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:listener/app/backend/b43653413e8cc89f/ac87db52a993c591",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:loadbalancer/app/backend/b43653413e8cc89f",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.internal-alb",
            "aws_lb_target_group.internal-target-alb",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private",
            "aws_subnet.private-subnet-1",
            "aws_subnet.private-subnet-2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external-target-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-ALB-TG/161c782cc9421822",
            "arn_suffix": "targetgroup/External-ALB-TG/161c782cc9421822",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-ALB-TG/161c782cc9421822",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "External-ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal-target-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-ALB-TG/6f4ffa96e36c0f0a",
            "arn_suffix": "targetgroup/Internal-ALB-TG/6f4ffa96e36c0f0a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-ALB-TG/6f4ffa96e36c0f0a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Internal-ALB-TG",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-ALB-TG/161c782cc9421822-20230603002637993900000010",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-ALB-TG/161c782cc9421822",
            "target_id": "i-08f546730be9210db"
          },
          "dependencies": [
            "aws_instance.ec2-public-1",
            "aws_key_pair.generated_key",
            "aws_lb.internal-alb",
            "aws_lb_target_group.external-target-elb",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private",
            "aws_security_group.alb-public",
            "aws_security_group.public",
            "aws_subnet.private-subnet-1",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this",
            "data.template_file.user_data",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-attachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-ALB-TG/161c782cc9421822-20230603002649080400000011",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-ALB-TG/161c782cc9421822",
            "target_id": "i-096f95d8d62793ffa"
          },
          "dependencies": [
            "aws_instance.ec2-public-2",
            "aws_key_pair.generated_key",
            "aws_lb.internal-alb",
            "aws_lb_target_group.external-target-elb",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private",
            "aws_security_group.alb-public",
            "aws_security_group.public",
            "aws_subnet.private-subnet-1",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-2",
            "aws_vpc.this",
            "data.template_file.user_data",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "internal-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-ALB-TG/6f4ffa96e36c0f0a-2023060300242758470000000a",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-ALB-TG/6f4ffa96e36c0f0a",
            "target_id": "i-047cdb8cf311caecd"
          },
          "dependencies": [
            "aws_instance.ec2-private-1",
            "aws_key_pair.generated_key",
            "aws_lb_target_group.internal-target-alb",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private",
            "aws_security_group.private",
            "aws_subnet.private-subnet-1",
            "aws_vpc.this",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "internal-attachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-ALB-TG/6f4ffa96e36c0f0a-2023060300260022120000000d",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-ALB-TG/6f4ffa96e36c0f0a",
            "target_id": "i-0c07c3ae803328efb"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_instance.ec2-private-2",
            "aws_key_pair.generated_key",
            "aws_lb_target_group.internal-target-alb",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private",
            "aws_security_group.private",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0003590cff8b96ca9",
            "association_id": "eipassoc-07c0d5ba597c8615b",
            "connectivity_type": "public",
            "id": "nat-0be66ce4d595be084",
            "network_interface_id": "eni-0ea1aa533ed155d40",
            "private_ip": "192.168.2.185",
            "public_ip": "50.19.239.219",
            "subnet_id": "subnet-015c822170ea8052a",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-nat-gateway",
              "Path": "terraform/nat-gateway.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-nat-gateway",
              "Path": "terraform/nat-gateway.tf"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_s3_bucket.this",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:route-table/rtb-0a13558ebaa9ac190",
            "id": "rtb-0a13558ebaa9ac190",
            "owner_id": "831187637319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0be66ce4d595be084",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-route_table-private",
              "Path": "terraform/routetable-nat-gateway.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-route_table-private",
              "Path": "terraform/routetable-nat-gateway.tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_s3_bucket.this",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:route-table/rtb-04e17e950fa8f4614",
            "id": "rtb-04e17e950fa8f4614",
            "owner_id": "831187637319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e23848f23fbbed1f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route to internet"
            },
            "tags_all": {
              "Name": "Route to internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050379c92d2b28d97",
            "route_table_id": "rtb-0a13558ebaa9ac190",
            "subnet_id": "subnet-025d26b359d874eb5"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_s3_bucket.this",
            "aws_subnet.db-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061d0387ff10a46a3",
            "route_table_id": "rtb-0a13558ebaa9ac190",
            "subnet_id": "subnet-0820bbafc19e1164e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_s3_bucket.this",
            "aws_subnet.db-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059ca9f8f008c8c2e",
            "route_table_id": "rtb-0a13558ebaa9ac190",
            "subnet_id": "subnet-018d0aa994ce80d99"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_s3_bucket.this",
            "aws_subnet.private-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ced5cddcce1e473e",
            "route_table_id": "rtb-0a13558ebaa9ac190",
            "subnet_id": "subnet-07a94b8d3ce617673"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_s3_bucket.this",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063b7472ae69fe3b4",
            "route_table_id": "rtb-04e17e950fa8f4614",
            "subnet_id": "subnet-015c822170ea8052a"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.route",
            "aws_s3_bucket.this",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b046765da9255fa",
            "route_table_id": "rtb-04e17e950fa8f4614",
            "subnet_id": "subnet-0f9d26b21e543d23e"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.route",
            "aws_s3_bucket.this",
            "aws_subnet.public-subnet-2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:security-group/sg-041058082c17466f2",
            "description": "Private ALB SG Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041058082c17466f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "umg-is-tf-sg-alb-private20230603002338775900000003",
            "name_prefix": "umg-is-tf-sg-alb-private",
            "owner_id": "831187637319",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:security-group/sg-03ef22103245f79d1",
            "description": "Public ALB SG Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ef22103245f79d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "umg-is-tf-sg-alb-public20230603002338890300000004",
            "name_prefix": "umg-is-tf-sg-alb-public",
            "owner_id": "831187637319",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:security-group/sg-0fa766301650080b8",
            "description": "DB SG Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa766301650080b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/24",
                  "192.168.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "umg-is-tf-sg-db20230603002337725400000001",
            "name_prefix": "umg-is-tf-sg-db",
            "owner_id": "831187637319",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:security-group/sg-0127e926052e57bb2",
            "description": "Private SG Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0127e926052e57bb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.2.0/24",
                  "192.168.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041058082c17466f2"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "umg-is-tf-sg-private20230603002342041300000006",
            "name_prefix": "umg-is-tf-sg-private",
            "owner_id": "831187637319",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_security_group.alb-private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:security-group/sg-022c6738bb03c2446",
            "description": "Public SG Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022c6738bb03c2446",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ef22103245f79d1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "umg-is-tf-sg-public20230603002342056900000007",
            "name_prefix": "umg-is-tf-sg-public",
            "owner_id": "831187637319",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_security_group.alb-public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:subnet/subnet-025d26b359d874eb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025d26b359d874eb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831187637319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-db-subnet-1",
              "Path": "terraform/subnets-db.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-db-subnet-1",
              "Path": "terraform/subnets-db.tf"
            },
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:subnet/subnet-0820bbafc19e1164e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0820bbafc19e1164e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831187637319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-db-subnet-2",
              "Path": "terraform/subnets-db.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-db-subnet-2",
              "Path": "terraform/subnets-db.tf"
            },
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:subnet/subnet-018d0aa994ce80d99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018d0aa994ce80d99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831187637319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-private-subnet-1",
              "Path": "terraform/subnets-private.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-private-subnet-1",
              "Path": "terraform/subnets-private.tf"
            },
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:subnet/subnet-07a94b8d3ce617673",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a94b8d3ce617673",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831187637319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-private-subnet-2",
              "Path": "terraform/subnets-private.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-private-subnet-2",
              "Path": "terraform/subnets-private.tf"
            },
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:subnet/subnet-015c822170ea8052a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015c822170ea8052a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831187637319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-public-subnet-1",
              "Path": "terraform/subnets-public.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-public-subnet-1",
              "Path": "terraform/subnets-public.tf"
            },
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:subnet/subnet-0f9d26b21e543d23e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9d26b21e543d23e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831187637319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-public-subnet-2",
              "Path": "terraform/subnets-public.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-public-subnet-2",
              "Path": "terraform/subnets-public.tf"
            },
            "vpc_id": "vpc-0ac4f798023280716"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:vpc/vpc-0ac4f798023280716",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-06cd0999fbf9627d6",
            "default_route_table_id": "rtb-0fe417c0935c6954d",
            "default_security_group_id": "sg-0ed6814d87e8207c1",
            "dhcp_options_id": "dopt-0d619b2cc4568acf4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac4f798023280716",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fe417c0935c6954d",
            "owner_id": "831187637319",
            "tags": {
              "Environment": "dev",
              "Name": "umg-is-tf-vpc",
              "Path": "terraform/vpc.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "umg-is-tf-vpc",
              "Path": "terraform/vpc.tf"
            }
          },
          "dependencies": [
            "aws_s3_bucket.this"
          ]
        }
      ]
    }
  ]
}